--- a/app/index.html
+++ b/app/index.html
@@ -1,70 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <!-- Based on the template in Web Starter Kit :
-      https://github.com/google/web-starter-kit/blob/master/app/index.html -->
-
-    <meta charset="utf-8">
-
-    <!-- Setting IE=edge tells Internet Explorer to use the latest engine to
-      render the page and execute Javascript -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <!-- Meta descriptions are commonly used on search engine result pages to
-      display preview snippets for a given page. -->
-    <meta name="description" content="Your One-Stop solution for a full-stack
-    universal Redux App">
-
-    <!-- Using the viewport tag allows you to control the width and scaling of
-      the browser's viewport:
-      - include width=device-width to match the screen's width in
-      device-independent pixels
-      - include initial-scale=1 to establish 1:1 relationship between css pixels
-      and device-independent pixels
-      - ensure your page is accessible by not disabling user scaling.
-    -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>reactGo - just ship it</title>
-
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
-
-   <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="reactGo">
-    <link rel="icon" sizes="192x192"
-    href="${require(`images/chrome-ninja192-precomposed.png`)}" />
-
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="reactGo">
-    <link rel="apple-touch-icon" href="${require(`images/apple-ninja152-precomposed.png`)}">
-
-
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage"
-          content="${require(`images/ms-ninja144-precomposed.png`)}">
-    <meta name="msapplication-TileColor" content="#3372DF">
-
-    <link rel="icon" href="${require(`images/favicon.png`)}"/>
-
-    <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
-    <!--
-      <link rel="canonical" href="http://www.example.com/">
-    -->
-
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto+Condensed"
-          type="text/css" />
+    !!TITLE_TAG!!
     !!META_TAGS!!
-
     !!LINK_TAGS!!
   </head>
   <body>
     <div id="app">!!COMPONENT_HTML!!</div>
     <script>window.__INITIAL_STATE__ = !!INITIAL_STATE!!</script>
-    !!SCRIPT_ASSETS!!
+    !!SCRIPT_TAGS!!
   </body>
 </html>
